2010-10-23  Christopher Faylor  <me+cygwin@cgf.cx>

	* pinfo.cc (pinfo::exit): Grab a tty lock before setting pgid.

2010-10-23  Christopher Faylor  <me+cygwin@cgf.cx>

	* pinfo.cc (pinfo::exit): Reset tty pgrp to zero if no more handles open.
	(_pinfo::set_ctty): Remove debugging stuff.

2010-10-23  Christopher Faylor  <me+cygwin@cgf.cx>

	* fhandler_tty.cc (fhandler_pty_master::open): Remove debugging printf.

2010-10-23  Christopher Faylor  <me+cygwin@cgf.cx>

	* fhandler.h (fhandler_termios::tcinit): Make second argument
	non-optional.
	* fhandler_console.cc (fhandler_console::open): Specify second argument
	to tcinit.
	* fhandler_termios.cc (fhandler_termios::tcinit): Rename second
	argument.  Set pgid to 0 if this is a pty master.
	(fhandler_termios::tcgetpgrp): Just return value of pgid.  It will be
	zero if not initialized.
	* fhandler_tty.cc (fhandler_tty_slave::open): Specify second argument
	to tcinit.
	(fhandler_tty_slave::ioctl): Implement TIOCGPRP/TIOCSPGRP.  Fix switch
	indentation.
	(fhandler_tty_master::ioctl): Implement TIOCGPRP/TIOCSPGRP.
	* include/sys/termios.h (TIOCGPGRP): Define similarly to Linux.
	(TIOCSPGRP): Ditto.

2010-10-18   Marco Atzeri  <marco_atzeri@yahoo.it>

	* winsup/cygwin/cygwin.din: Add llround and llroundf.

2010-10-09  John Carey  <aeolus@electric-cloud.com>
	    Corinna Vinschen  <corinna@vinschen.de>

	* cygheap.h (cwdstuff::override_win32_cwd): Declare.
	* ntdll.h (struct _PEB): Add members accessed by the fast cwd method
	starting with Vista.
	(struct _KUSER_SHARED_DATA): Define with only the DismountCount.
	(RtlAllocateHeap): Declare.
	(RtlEnterCriticalSection): Declare.
	(RtlFreeHeap): Declare.
	(RtlLeaveCriticalSection): Declare.
	* path.cc (get_user_proc_parms): Remove.
	(struct _FAST_CWD): New structure.
	(fast_cwd_ptr): Define.
	(SharedUserData): Define.
	(peek32): Define.
	(find_fast_cwd_pointers): New function to find the global pointer
	to the current FAST_CWD structure.
	(copy_cwd_str): New helper function.